# cuwfrt

./: .clang-format  .gitignore  CMakeLIsts.txt  LICENSE  README.md  api.h  build.bat  main.cu
.github/: diagram.drawio
res/: readme.txt
src/: CMakeLists.txt  async_job.h  builder.cpp  builder.cu  builder.cuh  builder.h  bvh.cu  bvh.cuh  camera.h  common.h  cuda_api.h  cuda_error.cuh  dynamic_dispatcher.h  filters.h  frame.h  gpu_scene.cu  gpu_scene.cuh  indices.h  intersection.h  kernel_material.cuh  kernel_texture.cuh  kernel_utils.cuh  kernels.cuh  main.cu  material.h  materials.h  mesh.h  parallel.h  parallel_for.cpp  parallel_for.h  polymorphic_vector.h  primitive.h  quad_renderer.h  raytracer.cu  raytracer.cuh  raytracer.h  sampling.h  scene.cpp  scene.cu  scene.h  (+5 more)
src/cuwfrt/: common.h  cuda_api.h  cuda_buffer.h  cuda_error.cuh  cuda_error.h  denoise.h  frame_buffer.cu  frame_buffer.h  raytracer.cu  raytracer.cuh  raytracer.h  wavefront.cu  wavefront.h
src/cuwfrt/accel/: bvh.cpp  bvh.cu  bvh.cuh  bvh.h
src/cuwfrt/camera/: camera.h  filters.h
src/cuwfrt/geometry/: intersection.h  mesh.cpp  mesh.h  primitive.h  triangle.h  triangle_mesh.cpp  triangle_mesh.h
src/cuwfrt/kernel/: device_intersect.cuh  device_material.cuh  device_primitive.cuh  device_texture.cuh  device_utils.cuh  kernel_accumulate.cuh  kernel_albedo.cuh  kernel_ao.cuh  kernel_debug.cuh  kernel_denoise.cuh  kernel_intersect.cuh  kernel_material.cuh  kernel_primitive.cuh  kernel_pt_naive.cuh  kernel_pt_nee.cuh  kernel_texture.cuh  kernel_utils.cuh  kernel_wavefront.cuh  kernels.cuh
src/cuwfrt/loader/: loader.cu  loader.cuh  loader.h
src/cuwfrt/material/: material.h  materials.cuh  materials.h
src/cuwfrt/scene/: builder.cu  builder.cuh  gpu_scene.cu  gpu_scene.cuh  gpu_scene.h  scene.cu  scene.cuh
src/cuwfrt/shading/: frame.h  microfacet.cuh  microfacet.h  sampling.h  scattering.h
src/cuwfrt/texture/: texture.cu  texture.h  texture_desc.h
src/cuwfrt/util/: dynamic_dispatcher.h  parallel.cpp  parallel.h  polymorphic_vector.h
src/kernel/: api.cuh  kernels.cuh
